test/Fail/UnequalPolarity.err
UnequalPolarity.agda:9.5-6: error: [UnequalTypes]
The function type
  @++ Set → Set
is not a subtype of
  Set → Set
because:
  one has strictly positive domain, while the other is mixed.
when checking that the expression f has type Set → Set
